# SuperMemory

./: .env.example  .git-coauthor  .gitignore  .mailmap  .mcp.json  LICENSE  PRIVACY.md  README.md  docker-compose.yml  pyproject.toml  server.json
.claude/skills/supermemory-agent-learning/: examples.md  reference.md
.cursor/rules/: no-cursor-attribution.mdc
.cursor/skills/uall-agent-learning/: SKILL.md  examples.md  reference.md
.github/workflows/: publish.yml
api/: openapi.yaml
docs/: GIT_SETUP.md  PUBLISHING.md  RELEASES.md  release-notes-v0.2.4.md  release-notes-v0.2.5.md
examples/: claude_desktop_config.json  cursor.mcp.json
examples/cursor_mcp/: mcp.json
examples/mcp_agents/: multi_agent_mcp.py  run_md_agents.py  single_agent_mcp.py  skill_guided_mcp.py
examples/mcp_agents/agents/: ocr_worker.md  orchestrator.md  planner.md
examples/multi_agent_orchestrator/: demo.py
scripts/: install_git_hooks.ps1  release.py  sync_skills.py
scripts/hooks/: prepare-commit-msg
skills/: README.md
skills/supermemory-agent-learning/: SKILL.md
src/supermemory_mcp/: __init__.py  bridge.py  handlers.py  server.py  text.py
storage/adapters/: file.py  postgres_qdrant_redis.py  sqlite_chroma.py
tests/: conftest.py  run_all.py  test_core.py  test_mcp.py  test_mcp_comprehensive.py  test_mcp_rest_parity.py  test_mcp_server.py  test_registry.py  test_uall.py
uall_mcp/: client.py  handlers.py  server.py
