[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supermemory-mcp"
version = "0.2.0"
description = "SuperMemory: MCP-first learning memory layer for Claude, Cursor, and agent workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yashvant Hange", email = "yashvanthange420@gmail.com" },
]
keywords = ["mcp", "claude", "cursor", "agent-memory", "supermemory", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [    "pydantic>=2.5",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
    "python-dateutil>=2.8",
    "mcp>=1.27,<2",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
postgres = ["asyncpg>=0.29", "psycopg2-binary>=2.9"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/YashvantHange/SuperMemory"
Repository = "https://github.com/YashvantHange/SuperMemory"
Issues = "https://github.com/YashvantHange/SuperMemory/issues"

[project.scripts]
supermemory-mcp = "supermemory_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/uall_core",
    "packages/uall",
    "packages/uall_server",
    "packages/uall_python",
]

[tool.hatch.build.targets.wheel.force-include]
"src/supermemory_mcp" = "supermemory_mcp"
"storage" = "storage"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "packages", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
